testsuite/tests/polykinds/T16902.stderr

T16902.hs:11:10: error:
    • Expected a type, but found something with kind ‘a’
    • In the type ‘F a’
      In the definition of data constructor ‘MkF’
      In the data declaration for ‘F’
